@@ -54,6 +54,8 @@ either thanks to the MIME type,
 or from the file being rendered itself.
 .It Fl \-mime Ar MIME
 MIME type of the content to parse.
+.It Fl \-mode Ar MODE
+MODE to use to render to choose between normal (default), full or source
 .It Fl \-url Ar URL ...
 original URL of the content.
 .El
