@@ -37,6 +37,8 @@ path to the file or URL to open.
 .Bl -tag -width Ds -offset indent
 .It Fl h , \-help
 Show a help message and exit
+.It Fl \-mode Ar MODE
+MODE to use to render to choose between normal (default), full or source
 .El
 .
 .Sh EXIT STATUS
